--- a/HTML/form.html
+++ b/HTML/form.html
@@ -10,11 +10,11 @@ Proveremo a fare un Form- Action in  HTML
     <h2>Form HTML </h2>
     
 
-    <form action="prova.php">
+    <form action="prova.php" method ="post">
         <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="John"><br>
+        <input type="text" id="fname" name="fname" value=" "><br>
         <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe"><br><br>
+        <input type="text" id="lname" name="lname" value=" "><br><br>
         <input type="submit" value="Submit">
       </form> 
 
